# gruthingy

./: .gitignore  Cargo.toml  README.md  ascii_dictionary.txt
shaders/: backprop.comp  feedforward.comp
src/: config.rs  lib.rs  main.rs  neural_network.rs  word_vectorizer.rs
src/neural_network/: containers.rs  embedding_unit.rs  gru.rs  lstm.rs  network.rs  network_unit.rs  neural_network_config.rs  optimizers.rs  rnn.rs
src/neural_network/containers/: arrayfire_wrapper.rs  blas_wrapper.rs  matrix_wrapper.rs  nyan_wrapper.rs
