[package]
name = "gruthingy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
arrayfire = { version = "3.8.0", features = ["afserde"] }
ciborium = "0.2.1"
fastrand = "1.9.0"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.171", features = ["rc"] }

[profile.release]
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
