[package]
name = "gruthingy"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
# arrayfire = { version = "3.8.0", features = ["afserde"] }
fastrand = "1.9.0"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.171", features = ["rc"] }
strum_macros = "0.25.2"
unicode_reader = "1.0.2"
# the cancer design of having to have a mut slice for the output array is preventing me
# from using normal blas ; -;
# blas-sys = "0.7"
# openblas-src = { version = "0.10", features = ["system"] }

[profile.release]
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true

[features]
timedebug = []
